test/fail/bad-package-import1.mo
import imported1 "mo:foo";

//SKIP run
//SKIP run-ir
//SKIP run-low
//SKIP comp

